# weather-app

./: .actrc  .continuerules  .gitignore  .weather.env.example  AGENTS.md  CACHE_PERSISTENCE.md  CLAUDE.md  DeepSeek-Chat-Refactoring-Weather.py-Modular-OO-Weather-Program-Response-001.md  LICENSE.txt  QWEN.md  README.md  SECURITY.md  event.json  example.weather.yaml  gptme.toml  improvements-by-aider-20250325-120000.md  paseo.json  pyproject.toml  requirements.txt  ruff.toml  tshighlight.txt  weather.env.example  weather.py  zensical.toml
.claude/commands/clavix/: archive.md  implement.md  improve.md  plan.md  prd.md  refine.md  review.md  start.md  summarize.md  verify.md
.clavix/: config.json
.clavix/instructions/workflows/: archive.md  implement.md  improve.md  plan.md  prd.md  refine.md  review.md  start.md  summarize.md  verify.md
.clavix/outputs/version-command-plan/: tasks.md
.clavix/outputs/weather-app-cli-enhancement/: full-prd.md  quick-prd.md  tasks.md
.config/opencode/agent/: python-developer.md
.gemini/commands/clavix/: archive.toml  implement.toml  improve.toml  plan.toml  prd.toml  refine.toml  review.toml  start.toml  summarize.toml  verify.toml
.github/: copilot-instructions.md  dependabot.yml
.github/prompts/: clavix-archive.prompt.md  clavix-implement.prompt.md  clavix-improve.prompt.md  clavix-plan.prompt.md  clavix-prd.prompt.md  clavix-refine.prompt.md  clavix-review.prompt.md  clavix-start.prompt.md  clavix-summarize.prompt.md  clavix-verify.prompt.md
.github/workflows/: pylint.yml  quality.yml  ruff.yml  security.yml
.opencode/command/: clavix-archive.md  clavix-implement.md  clavix-improve.md  clavix-plan.md  clavix-prd.md  clavix-refine.md  clavix-start.md  clavix-summarize.md  clavix-verify.md
.qwen/commands/clavix/: archive.toml  implement.toml  improve.toml  plan.toml  prd.toml  refine.toml  review.toml  start.toml  summarize.toml  verify.toml
.roo/commands/: clavix-archive.md  clavix-implement.md  clavix-improve.md  clavix-plan.md  clavix-prd.md  clavix-review.md  clavix-start.md  clavix-summarize.md
.roo/rules/: clavix-implement.md  clavix-improve.md  clavix-plan.md  clavix-prd.md  clavix-refine.md  clavix-start.md  clavix-verify.md
hooks/: pre-commit  pre-commit.ps1
src/weather_app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  security.py  utils.py
src/weather_app/cli/: __init__.py  command_logging.py  config_override.py  errors.py  group.py  help_formatter.py  options.py  output_formatters.py
src/weather_app/cli/commands/: __init__.py  cache.py  config.py  setup.py  version.py  weather.py
src/weather_app/cli/formatters/: __init__.py  json_formatter.py  markdown_formatter.py  tui_formatter.py
src/weather_app/models/: __init__.py  weather_data.py
src/weather_app/services/: __init__.py  async_weather_service.py  cache_persistence.py  location_service.py  ui_service.py  weather_service.py
tests/functional/: conftest.py  test_cli_e2e.py
tests/integration/: test_cli_integration.py  test_config_integration.py  test_service_integration.py
tests/unit/: test_async_weather_service.py  test_cli_commands.py  test_cli_logging.py  test_config.py  test_exceptions.py  test_location_service.py  test_logging_config.py  test_main.py  test_security.py  test_structured_logging.py  test_ui_service.py  test_utils.py  test_version_command.py  test_weather_data.py  test_weather_service.py
weather_app/: main.py
weather_app/models/: __init__.py  weather_data.py
weather_app/services/: ui_service.py  weather_service.py
