[project]
name = "weather-app"
version = "0.5.6"
description = "A CLI weather app using OpenWeatherMap API, written in Python 3"
authors = [
    {name = "Lord Sohron",email = "29570082+vihoma@users.noreply.github.com"}
]
license = {text = "BSD 3-Clause"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyowm (>=3.4.0,<4.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "cachetools (>=5.3.0,<6.0.0)",
    "geopy (>=2.4.0,<3.0.0)",
    "setuptools (>=80.9.0, <81.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "async-timeout (>=4.0.0,<5.0.0)",
    "keyring (>=24.3.0,<25.0.0)",
    "python-json-logger (>=2.0.0,<3.0.0)"
]

[project.scripts]
# This is the main script entry point for the weather app
weather = "weather_app.main:main"

[tool.poetry]
packages = [
    {include = "weather_app", from = "src"}
]

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
isort = "^7.0.0"
flake8 = "^7.3.0"
ruff = "^0.14.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
