[project]
name = "weather-app"
version = "0.6.5"
description = "A CLI weather app using OpenWeatherMap API, written in Python 3"
authors = [
    {name = "Lord Sohron",email = "29570082+vihoma@users.noreply.github.com"}
]
license = {text = "BSD 3-Clause"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyowm (>=3.4.0,<4.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "cachetools (>=7.0.0,<8.0.0)",
    "geopy (>=2.4.0,<3.0.0)",
    "setuptools (>=80.9.0, <83.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "async-timeout (>=5.0.0,<6.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "click (>=8.1.0,<9.0.0)"
]

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-click (>=1.1.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pyrefly (>=0.52.0,<0.53.0)"
]

[project.scripts]
# This is the main script entry point for the weather app
weather = "weather_app.main:main"

[tool.poetry]
packages = [
    {include = "weather_app", from = "src"}
]



[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short"
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, test interactions)",
    "functional: Functional tests (end-to-end)",
    "slow: Slow running tests",
    "api: Tests that require external API calls",
    "async: Async tests",
    "skip: Tests that should be skipped"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
